added basic btns and style

--- a/index.html
+++ b/index.html
@@ -16,8 +16,31 @@
     <title>Smart house</title>
   </head>
   <body>
-    <p>I'm anton</p>
-    <p>hello world</p>
+    <div class="container" id="container">
+      <!-- <div id="square">
+        <p>Bulb</p>
+        <i id="bulb" class="far fa-lightbulb"></i>
+      </div>
+      <div id="square">
+        <p>Bulb</p>
+        <i id="bulb" class="far fa-lightbulb"></i>
+      </div>
+      <div id="square">
+        <p>Bulb</p>
+        <i id="bulb" class="far fa-lightbulb"></i>
+      </div>
+      <div id="square">
+        <p>Bulb</p>
+        <i id="bulb" class="far fa-lightbulb"></i>
+      </div>
+      <div id="square">
+        <p>Bulb</p>
+        <i id="bulb" class="far fa-lightbulb"></i>
+      </div> -->
+    </div>
+    <div class="container-wrapper">
+      <div id="space"></div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
