--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <i id="bulb" class="far fa-lightbulb"></i>
       </div> -->
     </div>
-    <div class="container-wrapper">
+    <div class="container-wrapper" id="container-wrapper">
       <div id="space"></div>
     </div>
     <script src="./script.js"></script>
