delete not nedeed tags

--- a/index.html
+++ b/index.html
@@ -16,28 +16,7 @@
     <title>Smart house</title>
   </head>
   <body>
-    <div class="container" id="container">
-      <!-- <div id="square">
-        <p>Bulb</p>
-        <i id="bulb" class="far fa-lightbulb"></i>
-      </div>
-      <div id="square">
-        <p>Bulb</p>
-        <i id="bulb" class="far fa-lightbulb"></i>
-      </div>
-      <div id="square">
-        <p>Bulb</p>
-        <i id="bulb" class="far fa-lightbulb"></i>
-      </div>
-      <div id="square">
-        <p>Bulb</p>
-        <i id="bulb" class="far fa-lightbulb"></i>
-      </div>
-      <div id="square">
-        <p>Bulb</p>
-        <i id="bulb" class="far fa-lightbulb"></i>
-      </div> -->
-    </div>
+    <div class="container" id="container"></div>
     <div class="container-wrapper" id="container-wrapper">
       <div id="space"></div>
     </div>
