added tags for weather api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <div class="container-wrapper" id="container-wrapper">
       <div id="space"></div>
     </div>
+    <div class="weather-wrapper" id="weather-wrapper">
+      <div class="weather-header" id="weather-header">
+        <span></span>
+      </div>
+      <div class="temperature" id="temperature"></div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
