added weather api plugin

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     </div>
     <div class="weather-wrapper" id="weather-wrapper">
       <div class="weather-header" id="weather-header">
-        <span></span>
+        <h2 id="h2">Smth</h2>
       </div>
-      <div class="temperature" id="temperature"></div>
+      <div class="weather-temperature" id="weather-temperature">36 deg</div>
+      <div class="discription" id="discription"></div>
     </div>
     <script src="./script.js"></script>
   </body>
